Corrige erro no scroll

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     </div>
     <!-- Cars options  -->
     <div class="cars">
-      <ul class="mark">
+      <ul class="mark" id="car">
         <li>
           <a
-            href="#"
+            href="#car"
             class="active lamborghini"
             onclick="carSlider('/src/img/Lamborghini.png'); primaryColor('#daae15')"
             >Lamborghini</a
@@ -70,7 +70,7 @@
         </li>
         <li>
           <a
-            href="#"
+            href="#car"
             class="ferrari"
             onclick="carSlider('/src/img/Ferrari.png'); primaryColor('#D4010E')"
             >Ferrari</a
@@ -78,7 +78,7 @@
         </li>
         <li>
           <a
-            href="#"
+            href="#car"
             class="mclaren"
             onclick="carSlider('/src/img/McLaren.png'); primaryColor('#611E14')"
             >McLaren</a
@@ -86,7 +86,7 @@
         </li>
         <li>
           <a
-            href="#"
+            href="#car"
             class="ford"
             onclick="carSlider('/src/img/Ford.png'); primaryColor('#2E2E2E')"
             >Ford</a
@@ -94,7 +94,7 @@
         </li>
         <li>
           <a
-            href="#"
+            href="#car"
             class="bugatti"
             onclick="carSlider('/src/img/Bugatti.png'); primaryColor('#01A8FB')"
             >Bugatti</a
