--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <div class="navbar">
       <h2 class="logo">Cars<span>.</span></h2>
-      <div class="toggleMenu"></div>
+      <div class="toggleMenu" onclick="toggleMenu()"></div>
       <ul class="navigation">
         <li><a class="link" href="#">Home</a></li>
         <li><a class="link" href="#">About</a></li>
